Source/WebCore/dom/Document.cpp
@@ -1541,18 +1541,54 @@ void Document::setTitle(const String& title)
         updateTitle({ title, LTR });
 }
 
-void Document::updateTitleElement(Element* newTitleElement)
+void Document::updateTitleElement(Element& changingTitleElement)
 {
-    if (is<SVGSVGElement>(documentElement()))
-        m_titleElement = childrenOfType<SVGTitleElement>(*documentElement()).first();
-    else {
-        if (m_titleElement) {
-            if (isHTMLDocument() || isXHTMLDocument())
-                m_titleElement = descendantsOfType<HTMLTitleElement>(*this).first();
-        } else
-            m_titleElement = newTitleElement;
+    auto findHTMLTitle = [] (Document& document) -> Element* {
+        return descendantsOfType<HTMLTitleElement>(document).first();
+    };
+    auto isHTMLTitle = [] (Element& element) {
+        return is<HTMLTitleElement>(element);
+    };
+    auto isHTMLTitleEligible = [] (Element& element) {
+        return element.isConnected() && !element.isInShadowTree();
+    };
+
+    auto findSVGTitle = [] (Document& document) -> Element* {
+        return childrenOfType<SVGTitleElement>(*document.documentElement()).first();
+    };
+    auto isSVGTitle = [] (Element& element) {
+        return is<SVGTitleElement>(element);
+    };
+    auto isSVGTitleEligible = [] (Element& element) {
+        return element.parentNode() == element.document().documentElement();
+    };
+
+    // Most documents use HTML title rules.
+    // Documents with SVG document elements use SVG title rules.
+    bool useSVGTitle = is<SVGSVGElement>(documentElement());
+    auto findTitle = useSVGTitle ? findSVGTitle : findHTMLTitle;
+    auto isTitle = useSVGTitle ? isSVGTitle : isHTMLTitle;
+    auto isTitleEligible = useSVGTitle ? isSVGTitleEligible : isHTMLTitleEligible;
+
+    if (!isTitle(changingTitleElement)) {
+        ASSERT(m_titleElement == findTitle(*this));
+        return;
     }
 
+    Element* newTitleElement;
+    if (m_titleElement)
+        newTitleElement = findTitle(*this);
+    else {
+        // Optimized common case: We have no title element yet.
+        // We can figure out which title element should be used without searching.
+        newTitleElement = isTitleEligible(changingTitleElement) ? &changingTitleElement : nullptr;
+        ASSERT(newTitleElement == findTitle(*this));
+    }
+
+    if (m_titleElement == newTitleElement)
+        return;
+
+    m_titleElement = newTitleElement;
     updateTitleFromTitleElement();
 }
 
@@ -1561,7 +1597,7 @@ void Document::titleElementAdded(Element& titleElement)
     if (m_titleElement == &titleElement)
         return;
 
-    updateTitleElement(&titleElement);
+    updateTitleElement(titleElement);
 }
 
 void Document::titleElementRemoved(Element& titleElement)
@@ -1569,7 +1605,7 @@ void Document::titleElementRemoved(Element& titleElement)
     if (m_titleElement != &titleElement)
         return;
 
-    updateTitleElement(nullptr);
+    updateTitleElement(titleElement);
 }
 
 void Document::titleElementTextChanged(Element& titleElement)
