Source/WebCore/svg/SVGTitleElement.cpp
@@ -1,7 +1,7 @@
 /*
  * Copyright (C) 2004, 2005 Nikolas Zimmermann <zimmermann@kde.org>
  * Copyright (C) 2004, 2005, 2006 Rob Buis <buis@kde.org>
- * Copyright (C) 2016 Apple Inc. All rights reserved.
+ * Copyright (C) 2016-2017 Apple Inc. All rights reserved.
  *
  * This library is free software; you can redistribute it and/or
  * modify it under the terms of the GNU Library General Public
@@ -24,7 +24,6 @@
 
 #include "Document.h"
 #include "SVGNames.h"
-#include "Text.h"
 
 namespace WebCore {
 
@@ -39,22 +38,17 @@ Ref<SVGTitleElement> SVGTitleElement::create(const QualifiedName& tagName, Docum
     return adoptRef(*new SVGTitleElement(tagName, document));
 }
 
-Node::InsertionNotificationRequest SVGTitleElement::insertedInto(ContainerNode& rootParent)
+Node::InsertionNotificationRequest SVGTitleElement::insertedInto(ContainerNode& insertionPoint)
 {
-    SVGElement::insertedInto(rootParent);
-    if (!rootParent.isConnected())
-        return InsertionDone;
-
-    if (firstChild() && document().isSVGDocument())
-        document().titleElementAdded(*this);
+    SVGElement::insertedInto(insertionPoint);
+    document().titleElementAdded(*this);
     return InsertionDone;
 }
 
-void SVGTitleElement::removedFrom(ContainerNode& rootParent)
+void SVGTitleElement::removedFrom(ContainerNode& insertionPoint)
 {
-    SVGElement::removedFrom(rootParent);
-    if (rootParent.isConnected() && document().isSVGDocument())
-        document().titleElementRemoved(*this);
+    SVGElement::removedFrom(insertionPoint);
+    document().titleElementRemoved(*this);
 }
 
 void SVGTitleElement::childrenChanged(const ChildChange& change)
